When creating class methods for an interface through the user interface set abstract and virtual attributes

BUG:413519
FIXED-IN:2.29.3 (KDE Applications 19.08.03)